tests/pass/generic_alias.us
type transformer<T> = fn(T) -> T;

type foo<T> = T;

fn append(a:Vec<i32>,b:fn(T)) {
    
}

